--- a/makemkv/build-deb/compile.yaml
+++ b/makemkv/build-deb/compile.yaml
@@ -8,5 +8,6 @@ image_resource:
   type: docker-image
   source:
     repository: mastercactapus/makemkv-build-env
+    tag: deb
 run:
   path: repo/makemkv/build-deb/build.sh
