--- a/makemkv/build-deb/Dockerfile
+++ b/makemkv/build-deb/Dockerfile
@@ -1,3 +1,3 @@
 FROM ubuntu
 
-RUN apt-get install -y build-essential pkg-config libc6-dev libssl-dev libexpat1-dev libavcodec-dev libgl1-mesa-dev libqt4-dev checkinstall
+RUN apt-get update && apt-get install -y build-essential pkg-config libc6-dev libssl-dev libexpat1-dev libavcodec-dev libgl1-mesa-dev libqt4-dev checkinstall
