--- a/build-env/build.yaml
+++ b/build-env/build.yaml
@@ -7,9 +7,9 @@ image_resource:
   type: docker-image
   source:
     repository: debian
-    tag: jessie
+    tag: stretch
 run:
   path: repo/build-env/build.sh
 params:
   TARGET_ARCH: armhf
-  SUITE: jessie
+  SUITE: stretch
