--- a/easel/driver/build.yaml
+++ b/easel/driver/build.yaml
@@ -2,7 +2,7 @@ platform: linux
 inputs:
   - name: repo
   - name: easel
-  - name: easel-repo
+  - name: easel-driver-repo
   - name: node
   - name: appimagekit-bin
 outputs:
