--- a/images.yaml
+++ b/images.yaml
@@ -25,6 +25,13 @@ resources:
       <<: *DOCKER
       repository: mastercactapus/build-env
 
+  - name: build-env-makemkv
+    type: docker-image
+    source:
+      <<: *DOCKER
+      repository: mastercactapus/build-env
+      tag: stretch-amd64-makemkv
+
   - name: easel-repo
     type: git
     source:
@@ -47,7 +54,7 @@ resources:
     type: git
     source:
       uri: https://github.com/mastercactapus/pipelines.git
-      paths: [build-env]
+      paths: [build-env, makemkv/image]
 
   - name: debian-stretch
     type: docker-image
@@ -63,7 +70,7 @@ resources:
 
 jobs:
   - name: easel-resource
-    serial: true
+    serial_groups: [image]
     plan:
       - get: repo
         resource: easel-repo
@@ -77,7 +84,7 @@ jobs:
         params: {build: bin}
 
   - name: node-resource
-    serial: true
+    serial_groups: [image]
     plan:
       - get: repo
         resource: node-repo
@@ -91,7 +98,7 @@ jobs:
         params: {build: bin}
 
   - name: makemkv-resource
-    serial: true
+    serial_groups: [image]
     plan:
       - get: repo
         resource: makemkv-repo
@@ -105,7 +112,7 @@ jobs:
         params: {build: bin}
 
   - name: build-env-amd64
-    serial: true
+    serial_groups: [image]
     plan:
       - get: debian-stretch
         trigger: true
@@ -124,7 +131,7 @@ jobs:
           tag: bin/tag
 
   - name: build-env-i386
-    serial: true
+    serial_groups: [image]
     plan:
       - get: debian-stretch
         trigger: true
@@ -143,7 +150,7 @@ jobs:
           tag: bin/tag
 
   - name: build-env-armhf
-    serial: true
+    serial_groups: [image]
     plan:
       - get: debian-stretch
         trigger: true
@@ -162,7 +169,7 @@ jobs:
           tag: bin/tag
 
   - name: build-env-arm64
-    serial: true
+    serial_groups: [image]
     plan:
       - get: debian-stretch
         trigger: true
@@ -181,7 +188,7 @@ jobs:
           tag: bin/tag
 
   - name: build-env-armel
-    serial: true
+    serial_groups: [image]
     plan:
       - get: debian-stretch
         trigger: true
@@ -198,3 +205,12 @@ jobs:
         params:
           build: bin
           tag: bin/tag
+
+  - name: build-env-makemkv
+    serial_groups: [image]
+    plan:
+      - get: repo
+        resource: build-env-repo
+      - put: build-env-makemkv
+        params:
+          build: repo/makemkv/image
