--- a/makemkv/image/Dockerfile
+++ b/makemkv/image/Dockerfile
@@ -1,4 +1,4 @@
 FROM mastercactapus/build-env:stretch-amd64
 RUN apt-get -qq update && \
-    apt-get -qq install -y libc6-dev libssl-dev libexpat1-dev libavcodec-dev libgl1-mesa-dev libqt4-dev && \
+    apt-get -qq install -y libc6-dev libssl-dev libexpat1-dev libavcodec-dev libgl1-mesa-dev libqt4-dev qt5-default && \
     rm -rf /var/lib/apt/lists/*
